@@ -82,6 +82,7 @@ class ImageGallery
 	 */
 	function add( $image, $html='' ) {
 		$this->mImages[] = array( &$image, $html );
+		wfDebug( "ImageGallery::add " . $image->getName() . "\n" );
 	}
 
 	/**
@@ -157,8 +158,7 @@ class ImageGallery
 				# The image is blacklisted, just show it as a text link.
 				$thumbhtml = '<div style="height: 152px;">'
 					. $sk->makeKnownLinkObj( $nt, htmlspecialchars( $nt->getText() ) ) . '</div>';
-			}
-			else if( !( $thumb = $img->getThumbnail( 120, 120, $wgGenerateThumbnailOnParse ) ) ) {
+			} else if( !( $thumb = $img->getThumbnail( 120, 120, $wgGenerateThumbnailOnParse ) ) ) {
 				# Error generating thumbnail.
 				$thumbhtml = '<div style="height: 152px;">'
 					. htmlspecialchars( $img->getLastError() ) . '</div>';
